# lcc-nlp-python

./: .dockerignore  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
examples/: README.md  requirements.txt
examples/gradio/: Dockerfile  README.md  cleaner.py  lani.py  lcc_demo.py  lcc_theme.py  segmentizer.py  tokenizer.py
resources/cleaner/: README  StringReplacements.list  general.rules  lang_ara.rules  lang_ces.rules  lang_chr.rules  lang_fas.rules  lang_urd.rules  texttype_web.rules
resources/jlani/: blacklist_utf8.txt  lanikernel.ini
resources/jlani/wordlists/: lang_dist.tsv
resources/jlani/wordlists/plain/: afr.words  ara.words  deu.words  ell.words  eng.words  fra.words  ita.words  por.words  rus.words  spa.words  zho.words
resources/segmentizer/: boundariesFile.txt  postList.txt  postRules.txt  preList.txt  preRules.txt
resources/tokenizer/: 100-wn-all.txt  default.abbrev  fixed_tokens.txt  tokenization_character_actions.txt
src/lcc/: __main__.py  cleaner.py  cli.py  io.py  segmentizer.py  stats.py  tokenizer.py  util.py  workflow.py  workflow_parallel.py
src/lcc/cooccurrence/: __init__.py  medusa.py
src/lcc/integrations/spacy/: __init__.py  cleaner.py  lani.py  tokenizers.py
src/lcc/language/: sentence.py
tests/: conftest.py  test___main__.py  test_cleaner.py  test_cli.py  test_cooccurrence_medusa.py  test_io.py  test_io_warcio.py  test_segmentizer.py  test_stats.py  test_tokenizer.py  test_workflow.py  test_workflow_parallel.py
